Enhancement: SongClientTest now tests against multiple studies. Enhancement: SongClientTest now actually tests the real functionality with mock data Code Cleanup: Removed AbstractSongClient, renamed RealSongClient to SongClient, and made MockSongClient inherit it's functionality from SongClient. Bugfix: Changed SongUri field to use a URL instead. Code Cleanup: Cleaned up the SongImporter and SongProcessor code